main.css
.grid-container {
    display: grid;
    grid-template-columns: 19.2% 50.8% 30.2%;
    grid-column-gap: 0em;
    grid-row-gap: 0em;
    margin: auto;
    border: 2px solid #646464;
}

.grid-container > div {
    background: #FFFDF3;
    border: 3px solid #646464;
}

.pic-block {
    display: flex;
    justify-content: center;
    padding: 0em;
}

.title-block {
    display: flex;
    justify-content: center;
    align-items: center;
    grid-column:2/ span 2;
    padding: 1em;
}

.title-block > span {
    position: absolute;
    margin-top: -50px;
    margin-left: -25px;
    font-family: Georgia;
}

#about-block {
    grid-column:1/ span 2;
    padding: 1em;
}

#menu-block {
    grid-column:3;
    font-family:Georgia; font-size: 1em; font-weight: bold;
    padding: 1em;
}

#menu-block > a {
    text-decoration: none;
    color: black;
}

#research-block {
    grid-column:1/ span 3;
    padding: 1em;
}

#classes-block {
    grid-column:1/ span 3;
    padding: 1em;
}

#projects-block {
    grid-column:1/ span 3;
    padding: 1em;
}

/*NEW STUFF---------*/

.wrapper {
    width: 800px;
    margin: 0 auto;
}

#vikr-pic {
    max-width: 250px;
    max-height: 250px;
    width: 100%;
    height: auto;
}

#name-plate {
    font-size: 1.65em;
    color: #D69036;
}

#section-title {
    font-family:Georgia; font-size: 1.2em; font-weight: bold;
    color: #D69036;
}

#subsection-title {
    font-family:Georgia; font-size: 1em; font-weight: bold;
    color: #D69036;
}

@media screen and (max-width:800px) {
  /* CSS for screens that are 320 pixels or less will be put in this section */
    #vikr-pic {
        display: none;
    }

    .grid-container {    
        grid-template-columns: 0% 70.0% 30.2%;
    }

    .wrapper {
        width: 90vw;
    }

    .title-block {
        padding-top: 30px;
    }

    .title-block > span {
        margin-top: -30;
        margin-left: -25;
    }

}

